New training data format

--- a/training_data_creation.ipynb
+++ b/training_data_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "4  This description provides essential source inf...  False  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_msg = \"You are a helpful AI assistant that reviews technical descriptions for data entities and attributes. \\\n",
-    "Your task is to determine whether the description meets quality standards. If it does, respond with **Pass**. If not, respond with **Fail**. \\\n",
+    "system_msg = \"You are a helpful AI assistant that reviews the quality of data descriptions. \\\n",
+    "Respond with a \\\n",
     "- A **Pass** means the description is clear, complete, and accurately describes the attribute and its source. \\\n",
-    "- A **Fail** means the description lacks clarity, completeness, or essential details. \\\n",
+    "- A **Fail** means the description does not follow the provided guidelines. \\\n",
     "Please provide a short explanation for your decision. \\\n",
     "Your output format should be: \\\n",
     "Reason: <your explanation>  \\\n",
@@ -445,10 +445,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# output new train/test data to jsonl files with format:\n",
+    "# {\"system_prompt\": system_prompt,\"user_input\": user_input,\"reason\": reason,\"decision\": decision}\n",
+    "\n",
+    "with open(\"data_new/train_ALL_v2.jsonl\", \"w\") as f:\n",
+    "    for i, row in train_df.iterrows():\n",
+    "        user_msg = fr\"Description: {row['description']}\"\n",
+    "        assistant_msg = fr\"Reason: {row['comment']} Decision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
+    "        f.write(f'{{\"system_prompt\": \"{system_msg}\",\"user_input\": \"{user_msg}\",\"reason\": \"{row[\"comment\"]}\",\"decision\": \"{\"Pass\" if row[\"fail\"] == False else \"Fail\"}\"}}\\n')\n",
+    "\n",
+    "with open(\"data_new/test_ALL_v2.jsonl\", \"w\") as f:\n",
+    "    for i, row in test_df.iterrows():\n",
+    "        user_msg = fr\"Description: {row['description']}\"\n",
+    "        assistant_msg = fr\"Reason: {row['comment']} Decision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
+    "        f.write(f'{{\"system_prompt\": \"{system_msg}\",\"user_input\": \"{user_msg}\",\"reason\": \"{row[\"comment\"]}\",\"decision\": \"{\"Pass\" if row[\"fail\"] == False else \"Fail\"}\"}}\\n')\n",
+    "\n",
+    "with open(\"data_new/test_ALL_no_labels_v2.jsonl\", \"w\") as f:\n",
+    "    for i, row in test_df.iterrows():\n",
+    "        user_msg = fr\"Description: {row['description']}\"\n",
+    "        f.write(f'{{\"system_prompt\": \"{system_msg}\",\"user_input\": \"{user_msg}\"}}\\n')\n"
+   ]
   },
   {
    "cell_type": "code",
