--- a/model/training/training_data_creation.ipynb
+++ b/model/training/training_data_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "4  This description provides essential source inf...  False  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,6 +520,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output testing descriptions to a csv file\n",
+    "test_df.to_csv(\"data/test_ALL_descriptions.csv\", index=False)\n",
+    "\n",
+    "# split data into 4 even parts for testing\n",
+    "# split the test_df into 4 even parts\n",
+    "test_df1 = test_df.iloc[:len(test_df)//4]\n",
+    "test_df2 = test_df.iloc[len(test_df)//4:len(test_df)//2]\n",
+    "test_df3 = test_df.iloc[len(test_df)//2:3*len(test_df)//4]\n",
+    "test_df4 = test_df.iloc[3*len(test_df)//4:]\n",
+    "# output testing descriptions to a csv file\n",
+    "test_df1.to_csv(\"data/test_ALL_descriptions_1.csv\", index=False)\n",
+    "test_df2.to_csv(\"data/test_ALL_descriptions_2.csv\", index=False)\n",
+    "test_df3.to_csv(\"data/test_ALL_descriptions_3.csv\", index=False)\n",
+    "test_df4.to_csv(\"data/test_ALL_descriptions_4.csv\", index=False)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -541,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
